--- a/main.html
+++ b/main.html
@@ -22,7 +22,6 @@ student's ID and his/her Letter Grades in each required subject. You can also en
       <table class ="table table-striped table-bordered">
           <thead>
               <tr>
-                <th>Student ID</th>
                 <th>CS 520</th>
                 <th>CS 550</th>
                 <th>CS 571</th>
@@ -37,7 +36,6 @@ student's ID and his/her Letter Grades in each required subject. You can also en
             <!-- INPUT GRADES IN TABLE -->
 
               <tr id="inputGrades">
-                <td><input type="text" class="form-control" id="studentID" placeholder="student ID"/></td>
                 <td><input type="text" class="form-control grade" id="cs520" placeholder="letter grade"/></td>
                 <td><input type="text" class="form-control grade" id="cs550" placeholder="letter grade"/></td>
                 <td><input type="text" class="form-control grade" id="cs571" placeholder="letter grade"/></td>
@@ -72,8 +70,9 @@ student's ID and his/her Letter Grades in each required subject. You can also en
                             </button>
                           </div>
                           <div class="modal-body">
-                            <form action="submit.php" method="POST">
-                              
+
+
+                            <form>
                               <div class="form-group">
                                 
                                 <label for="message-text" class="col-form-label">Professor ID:</label>
